--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,36 @@
 .navBar {
 	border: solid 1px black;
 	width: 100%;
-	height: 30px;
+	height: 60px;
+}
+.navBar > img {
+	display: block;
 }
 
 .homeImageTitle {
-	border: solid 1px black;
+	border: solid 3px black;
 	width: 100%;
 	height: 30px;
+	margin: 10px 0px 10px 0px;
+	padding: 10px;
+}
+.homeImageTitle > img {
+	display: block;
+}
+
+.secondTitle {
+	border-top: solid 3px black;
+	width: 300px;
+	height: 30px;
+	margin: 0 auto;
+	padding: 10px;
+}
+.cardContainer {
+	display: flex;
+	flex-wrap: wrap;
+}
+.card {
+	border: solid 3px blue;
+	width: 240px;
+	margin: 0 auto;
 }
