--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
+body {
+	background-color: rgb(23, 48, 23);
+}
 .navBar {
 	border: solid 1px black;
-	width: 100%;
 	height: 60px;
+	display: flex;
+	justify-content: space-between;
+	padding: 5px 10px 5px;
+	margin: 10px;
+	background-color: rgb(185, 185, 11);
+	color: white;
+	font-size: 24px;
+	font-weight: bold;
 }
 .navBar > img {
 	display: block;
@@ -9,21 +19,33 @@
 
 .homeImageTitle {
 	border: solid 3px black;
-	width: 100%;
-	height: 30px;
-	margin: 10px 0px 10px 0px;
-	padding: 10px;
+	margin: 10px;
+	height: 400px;
 }
 .homeImageTitle > img {
-	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
-
+.homeImageTitle > h1 {
+	position: absolute;
+	top: 55%;
+	left: 75%;
+	transform: translate(50%, 50%);
+	color: white;
+	font-size: 32px;
+	font-weight: bold;
+}
 .secondTitle {
-	border-top: solid 3px black;
-	width: 300px;
+	border-top: solid 3px rgb(255, 255, 255);
+	width: 500px;
 	height: 30px;
+	padding: 30px;
+	font-size: 32px;
+	font-weight: bold;
 	margin: 0 auto;
-	padding: 10px;
+	display: block;
+	color: white;
 }
 .cardContainer {
 	display: flex;
@@ -32,5 +54,19 @@
 .card {
 	border: solid 3px blue;
 	width: 240px;
+	margin: 0 auto;
+}
+.card > img {
+	display: block;
+	margin: 0 auto;
+}
+
+.card > h3,
+p {
+	padding: 0px 20px;
+}
+
+.mapArea {
+	display: block;
 	margin: 0 auto;
 }
