creat NavBar.jsx and FooterBar.jsx * and Body css

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+* {
+	box-sizing: bordex-box;
+}
 body {
 	background-color: rgb(19, 119, 177);
+	margin: 0;
 }
 .homeImageTitle {
 	border: solid 10px black;
