--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 	background-color: rgb(19, 119, 177);
 	margin: 0;
 }
-
+/*----------------------NavBar---------------*/
 .navBar {
 	/* border: solid 0px rgb(185, 185, 11); */
 	height: 80px;
@@ -22,6 +22,9 @@ body {
 /* .navBar > img {
 	display: block;
 } */
+/*-------------------------------------*/
+
+/*----------------------Header---------------*/
 .headerMenu {
 	display: flex;
 	flex-wrap: wrap;
@@ -47,6 +50,10 @@ body {
 	height: 100%;
 	align-items: center;
 }
+
+/*-------------------------------------*/
+
+/*----------------------MainMenu---------------*/
 .mainMenu > h3:hover,
 h3:hover {
 	background-color: rgb(19, 119, 177);
@@ -78,6 +85,10 @@ h3:hover {
 	/* gap: 20px; */
 	align-content: center;
 }
+
+/*-------------------------------------*/
+
+/*----------------------TitleContainer---------------*/
 .homeImageTitle {
 	border: solid 10px black;
 	margin: 10px;
@@ -114,6 +125,9 @@ h3:hover {
 	flex-wrap: flex;
 	align-items: center;
 }
+/*-------------------------------------*/
+
+/*----------------------HomeView---------------*/
 .secondTitle {
 	border-top: solid 3px rgb(255, 255, 255);
 	width: 50%;
@@ -133,6 +147,9 @@ h3:hover {
 	flex-wrap: wrap;
 	gap: 10px;
 }
+/*-------------------------------------*/
+
+/*----------------------Card---------------*/
 .card {
 	border: solid 4px rgb(255, 0, 200);
 	border-radius: 25px;
@@ -151,7 +168,9 @@ h3:hover {
 p {
 	padding: 0px 20px;
 }
+/*-------------------------------------*/
 
+/*----------------------map---------------*/
 .mapArea {
 	color: white;
 	font-size: 24px;
@@ -165,6 +184,10 @@ p {
 	display: block;
 	margin: 0 auto;
 }
+
+/*-------------------------------------*/
+
+/*----------------------footer---------------*/
 
 .footerContainer {
 	background-color: rgb(56, 56, 56);
@@ -183,9 +206,13 @@ p {
 	margin: 10px;
 	padding: 5px;
 }
+
+/*-------------------------------------*/
 .imgNotFound {
 	width: 500px;
 }
+
+/*----------------------contact---------------*/
 .contactContainer {
 	text-align: center;
 	margin: 0px;
@@ -233,3 +260,5 @@ p {
 	padding: 0px;
 	flex-direction: column;
 }
+
+/*-------------------------------------*/
