--- a/src/index.css
+++ b/src/index.css
@@ -3,21 +3,23 @@
 	font-family: 'Satisfy', cursive;
 }
 body {
-	background-color: rgb(19, 119, 177);
+	/* background-color: #f4f2de; */
 	margin: 0;
+	color: #4a6660;
 }
 /*----------------------NavBar---------------*/
 .navBar {
 	/* border: solid 0px rgb(185, 185, 11); */
-	height: 80px;
+	height: 100px;
 	display: flex;
 	justify-content: space-between;
-	/* padding: 5px 10px 5px; */
-	margin: 10px;
-	background-color: rgb(185, 185, 11);
-	color: white;
+	position: relative;
+	/* background-color: #a1ccd1; */
 	font-size: 24px;
 	font-weight: bold;
+	width: 100%;
+	color: #4a6660 !important;
+	background-color: transparent;
 }
 /* .navBar > img {
 	display: block;
@@ -36,7 +38,7 @@ body {
 
 .headerMenuLogo {
 	/* border: solid 2px rgb(0, 255, 42); */
-	height: 100%;
+	height: 90%;
 }
 .logoHome {
 	display: flex;
@@ -49,6 +51,7 @@ body {
 	/* border: solid 2px blue; */
 	height: 100%;
 	align-items: center;
+	color: #4a6660 !important;
 }
 
 /*-------------------------------------*/
@@ -69,11 +72,12 @@ h3:hover {
 	/* border: solid 5px purple; */
 	height: 90%;
 	padding: 0px;
-	width: 550px;
+	width: 600px;
+	letter-spacing: -1px;
 }
 .mainMenuList > li {
 	text-decoration: none;
-	color: white;
+	/* color: white; */
 	padding: 0px 10px;
 	/* border: solid 1px blue; */
 	display: flex;
@@ -86,51 +90,41 @@ h3:hover {
 	/* gap: 20px; */
 	align-content: center;
 }
-
 /*-------------------------------------*/
 
 /*----------------------TitleContainer---------------*/
 .homeImageTitle {
-	border: solid 10px black;
-	margin: 10px;
-	height: 400px;
-}
-.homeImageTitle > img {
-	width: 100%;
+	/* border: solid 10px black; */
+	/* margin: 10px; */
 	height: 100%;
+
+	top: 0px;
+}
+.homeImageTitle > video {
+	opacity: 0.8;
 	object-fit: cover;
-	opacity: 0.5;
 }
 .homePageTitle {
-	/* font-family: 'Satisfy', cursive; */
-	position: absolute;
-	object-fit: cover;
+	/* position: absolute; */
 	/* border: solid 5px orange; */
-	color: white;
+	/* color: white; */
 	font-size: 32px;
 	font-weight: bold;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-align: center;
-	margin: -50px auto;
-}
-.homePageTitle > h1 {
-	margin-block-start: unset;
-	margin-block-end: unset;
-	text-align: center;
-	overflow-wrap: break-word;
-}
-.homePageTitle > h1 > span {
-	display: flex;
-	flex-wrap: flex;
+	/* top: 100%;
+	left: 90%; */
+	/* transform: translate(-50%, -50%); */
 	align-items: center;
+}
+.homePageTitle > h1,
+h4 {
+	text-align: center;
+	/* color: #99a98f; */
 }
 /*-------------------------------------*/
 
 /*----------------------HomeView---------------*/
 .secondTitle {
-	border-top: solid 3px rgb(255, 255, 255);
+	border-top: solid 3px rgb(5, 102, 73);
 	width: 50%;
 	height: 30px;
 	margin: 30px auto;
@@ -138,14 +132,14 @@ h3:hover {
 .secondTitle > h2 {
 	margin: 0px;
 	padding: 05px;
-	color: white;
+	/* color: white; */
 	font-size: 32px;
 	text-align: center;
 }
 .secondTitle > p {
 	margin-top: 0px;
 	padding: 05px;
-	color: white;
+	/* color: white; */
 	font-size: 24px;
 	text-align: center;
 }
@@ -156,40 +150,52 @@ h3:hover {
 	margin: 80px 0px;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 20px;
+	gap: 10px;
 	justify-content: space-evenly;
 }
 
 .card {
-	border: solid 4px rgb(255, 0, 200);
-	border-radius: 25px;
-	background-color: aquamarine;
-	width: 300px;
-	height: 400px;
-	margin: 0 auto;
-	gap: 40px;
-}
-.card > img {
-	border-radius: 20px;
-	padding-top: 15px;
-	display: block;
-	margin: 0 auto;
-	object-fit: cover;
-	width: 80%;
-	height: 70%;
-	border-radius: 10px;
-	object-position: 70%;
+	border: solid 4px #e9b384;
+	border-radius: 15px;
+	background: url('../img/natureza_tour_adventure_jeep_800x533.png');
+	width: 400px;
+	height: 600px;
+	margin: 0 20px;
+	/* gap: 40px; */
+	background-position: center;
+	background-size: cover;
+	position: relative;
+	overflow: hidden;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-.cardText > h3,
-p {
+.cardText {
 	padding: 0px 20px;
+	background-color: rgba(0, 0, 0, 0.192);
+	box-sizing: border-box;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	transform: translateY(81%);
+	transition: all 0.4s ease-in-out;
+	color: white;
+	backdrop-filter: blur(6px);
+}
+.cardText > h3 {
+	font-size: 28px;
+	margin: 10px 0px 0px;
+}
+.cardText > p {
+	font-size: 18px;
+}
+.card:hover .cardText {
+	transform: translateY(40%);
 }
 /*-------------------------------------*/
 
 /*----------------------map---------------*/
 .mapArea {
-	color: white;
+	/* color: white; */
 	font-size: 24px;
 	display: block;
 	margin: 20px;
@@ -207,8 +213,8 @@ p {
 /*----------------------footer---------------*/
 
 .footerContainer {
-	background-color: rgb(56, 56, 56);
-	margin: 10px;
+	background-color: #a1ccd1;
+	/* margin: 10px; */
 	padding: 20px;
 	display: flex;
 	flex-wrap: wrap;
@@ -237,7 +243,7 @@ p {
 	width: 70%;
 }
 .contactContainer > h2 {
-	color: white;
+	/* color: white; */
 	font-size: 32px;
 	/* font-family: 'Satisfy', cursive; */
 }
@@ -294,6 +300,17 @@ p {
 }
 
 /*-------------------------------------*/
+.aboutUsContainer {
+	/* color: white; */
+	text-align: center;
+	/* border: solid 1px rgb(255, 0, 34); */
+}
+.AboutUsTitle {
+	text-align: center;
+	margin-block-start: 0px;
+	margin-block-end: 0px;
+}
+
 /*----------------Button Send---------------------*/
 .sendButton {
 	/* border: solid 1px rgb(255, 0, 34); */
