--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 * {
 	box-sizing: bordex-box;
 	font-family: 'Satisfy', cursive;
+	margin: 0px;
+	padding: 0px;
 }
 body {
 	/* background-color: #f4f2de; */
@@ -147,10 +149,10 @@ h4 {
 
 /*----------------------Card---------------*/
 .cardContainer {
-	margin: 80px 0px;
+	margin: 50px 0px;
 	display: flex;
 	flex-wrap: wrap;
-	gap: 10px;
+	gap: 5px;
 	justify-content: space-evenly;
 }
 
@@ -158,9 +160,9 @@ h4 {
 	border: solid 4px #e9b384;
 	border-radius: 15px;
 	background: url('../img/natureza_tour_adventure_jeep_800x533.png');
-	width: 400px;
-	height: 600px;
-	margin: 0 20px;
+	width: 300px;
+	height: 500px;
+	margin: 0 10px;
 	/* gap: 40px; */
 	background-position: center;
 	background-size: cover;
@@ -193,6 +195,11 @@ h4 {
 }
 /*-------------------------------------*/
 
+/*----------------------CardInfo---------------*/
+.cardTitle {
+	position: relative;
+}
+/*-------------------------------------*/
 /*----------------------map---------------*/
 .mapArea {
 	/* color: white; */
@@ -324,4 +331,57 @@ h4 {
 	font-size: 24px;
 	cursor: pointer;
 }
+/*-------------------------------------*/
+
+/*---------------Slider----------------------*/
+.sliderContainer {
+	/* border: solid 3px blue; */
+	margin: 5px;
+	align-items: center;
+	/* flex-wrap: wrap; */
+	display: flex;
+	justify-content: center;
+	position: relative;
+	width: 100%;
+}
+.sliderImages {
+	border-radius: 20px;
+	box-shadow: 0px 0px 10px grey;
+	width: 100%;
+	/* height: 100%; */
+}
+.arrow {
+	position: absolute;
+	width: 2rem;
+	height: 2rem;
+	color: white;
+	filter: drop-shadow(0px 0px 10px black);
+}
+.arrow:hover {
+	cursor: pointer;
+}
+.left-arrow {
+	left: 1rem;
+}
+.right-arrow {
+	right: 1rem;
+}
+.indicators {
+	right: 1rem;
+	position: absolute;
+	bottom: 1rem;
+	gap: 2px;
+}
+.indicator {
+	background-color: white;
+	height: 0.5rem;
+	width: 0.5rem;
+	border-radius: 100%;
+	border: none;
+	outline: none;
+	box-shadow: 0px 0px 5px #555;
+	margin: 0px 2px;
+	cursor: pointer;
+}
+
 /*-------------------------------------*/
