--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@ h4 {
 	border-radius: 15px;
 	background: url('../img/natureza_tour_adventure_jeep_800x533.png');
 	width: 300px;
-	height: 500px;
+	height: 450px;
 	margin: 0 10px;
 	/* gap: 40px; */
 	background-position: center;
@@ -178,7 +178,7 @@ h4 {
 	height: 100%;
 	width: 100%;
 	position: absolute;
-	transform: translateY(81%);
+	transform: translateY(82%);
 	transition: all 0.4s ease-in-out;
 	color: white;
 	backdrop-filter: blur(6px);
@@ -230,13 +230,14 @@ h4 {
 }
 
 .footerCard {
-	border: solid 3px rgb(255, 0, 119);
+	/* border: solid 3px rgb(255, 0, 119); */
 	border-radius: 25px;
-	background-color: rgb(127, 172, 255);
+	background-color: rgb(157, 186, 240);
 	width: 300px;
 	margin: 10px;
 	padding: 5px;
 	text-align: center;
+	font-size: 24px;
 }
 
 /*-------------------------------------*/
@@ -338,17 +339,19 @@ h4 {
 	/* border: solid 3px blue; */
 	margin: 5px;
 	align-items: center;
-	/* flex-wrap: wrap; */
 	display: flex;
 	justify-content: center;
 	position: relative;
 	width: 100%;
 }
-.sliderImages {
+.slide {
 	border-radius: 20px;
 	box-shadow: 0px 0px 10px grey;
 	width: 100%;
 	/* height: 100%; */
+}
+.slideHidden {
+	display: none;
 }
 .arrow {
 	position: absolute;
@@ -367,20 +370,21 @@ h4 {
 	right: 1rem;
 }
 .indicators {
-	right: 1rem;
+	right: 50%;
 	position: absolute;
 	bottom: 1rem;
-	gap: 2px;
 }
 .indicator {
 	background-color: white;
-	height: 0.5rem;
-	width: 0.5rem;
+	height: 1.5rem;
+	width: 1.5rem;
 	border-radius: 100%;
-	border: none;
-	outline: none;
-	box-shadow: 0px 0px 5px #555;
-	margin: 0px 2px;
+	gap: 3px;
+}
+.indicatorInactive {
+	background-color: #746f6fc2;
+	height: 1rem;
+	width: 1rem;
 	cursor: pointer;
 }
 
