--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 /*----------------------NavBar---------------*/
 .navBar {
 	/* border: solid 0px rgb(185, 185, 11); */
-	height: 80px;
+	height: 100px;
 	display: flex;
 	justify-content: space-between;
 	position: relative;
@@ -95,29 +95,26 @@ h3:hover {
 /*-------------------------------------*/
 
 /*----------------------TitleContainer---------------*/
-.homeImageTitle {
+.mainImageTitle {
 	/* border: solid 10px black; */
 	/* margin: 10px; */
 	height: 100%;
-
 	top: 0px;
 }
-.homeImageTitle > video {
-	opacity: 0.8;
+.mainImageTitle > video {
+	opacity: 0.4;
 	object-fit: cover;
 }
-.homePageTitle {
+.mainTitle {
 	/* position: absolute; */
 	/* border: solid 5px orange; */
 	/* color: white; */
 	font-size: 32px;
-	font-weight: bold;
-	/* top: 100%;
-	left: 90%; */
-	/* transform: translate(-50%, -50%); */
-	align-items: center;
+	margin: -250px 0px 150px 0px;
+	align-items: right;
+	opacity: 0.9;
 }
-.homePageTitle > h1,
+.mainTitle > h1,
 h3 {
 	text-align: center;
 	/* color: #99a98f; */
@@ -164,30 +161,36 @@ h3 {
 }
 .aboutTitle {
 	/* border: solid 3px rgb(5, 102, 73); */
+	background-color: #dbcc95;
+}
+.aboutTitle > h2 {
+	margin: 20px;
 }
 .aboutTitle > img {
-	width: 400px;
+	width: 300px;
+	height: 300px;
+	object-fit: cover;
 	border-radius: 50%;
 	padding: 10px;
 }
 .aboutTitle > p {
-	width: 900px;
+	width: 600px;
 	font-size: 24px;
 	text-align: left;
 	padding: 20px 10px;
 }
 .companyContainer {
 	/* border: solid 5px blue; */
-	background-color: #dbcc95;
 }
 .companyContainer > h2 {
 	font-size: 28px;
+	margin: 20px;
 }
 .companyContainer > img {
 	width: 400px;
 }
 .companyContainer > p {
-	width: 600px;
+	width: 900px;
 	font-size: 24px;
 	text-align: left;
 	padding: 20px 10px;
